src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_index_fill_int_scalar_out(value out, value self, int64_t dim, value index, value value_);
value atg_index_fill_int_tensor(value self, int64_t dim, value index, value value_);
value atg_index_fill_int_tensor_(value self, int64_t dim, value index, value value_);
value atg_index_fill_int_tensor_out(value out, value self, int64_t dim, value index, value value_);
value atg_index_reduce(value self, int64_t dim, value index, value source, const char * reduce, int include_self);
value atg_index_reduce_(value self, int64_t dim, value index, value source, const char * reduce, int include_self);
value atg_index_reduce_out(value out, value self, int64_t dim, value index, value source, const char * reduce, int include_self);
value atg_index_select(value self, int64_t dim, value index);
value atg_index_select_backward(value grad, value self_sizes, int64_t dim, value index);
value atg_index_select_out(value out, value self, int64_t dim, value index);
value atg_indices(value self);
value atg_indices_copy(value self);
value atg_indices_copy_out(value out, value self);
value atg_infinitely_differentiable_gelu_backward(value grad, value self);
value atg_inner(value self, value other);
value atg_inner_out(value out, value self, value other);
value atg_instance_norm(value input, value weight, value bias, value running_mean, value running_var, int use_input_stats, double momentum, double eps, int cudnn_enabled);
value atg_int_repr(value self);
value atg_int_repr_out(value out, value self);
value atg_inverse(value self);
value atg_inverse_out(value out, value self);
value atg_is_coalesced(value self);
value atg_is_complex(value self);
value atg_is_conj(value self);
value atg_is_distributed(value self);
value atg_is_floating_point(value self);
value atg_is_inference(value self);
value atg_is_leaf(value self);
value atg_is_neg(value self);
value atg_is_nonzero(value self);
value atg_is_pinned(value self, int device);
value atg_is_same_size(value self, value other);
value atg_is_set_to(value self, value tensor);
value atg_is_signed(value self);
value atg_is_vulkan_available();
value atg_isclose(value self, value other, double rtol, double atol, int equal_nan);
value atg_isfinite(value self);
value atg_isin(value elements, value test_elements, int assume_unique, int invert);
value atg_isin_scalar_tensor(value element, value test_elements, int assume_unique, int invert);
value atg_isin_scalar_tensor_out(value out, value element, value test_elements, int assume_unique, int invert);
value atg_isin_tensor_scalar(value elements, value test_element, int assume_unique, int invert);
value atg_isin_tensor_scalar_out(value out, value elements, value test_element, int assume_unique, int invert);
value atg_isin_tensor_tensor_out(value out, value elements, value test_elements, int assume_unique, int invert);
value atg_isinf(value self);
value atg_isinf_out(value out, value self);
value atg_isnan(value self);
value atg_isnan_out(value out, value self);
value atg_isneginf(value self);
value atg_isneginf_out(value out, value self);
value atg_isposinf(value self);
value atg_isposinf_out(value out, value self);
value atg_isreal(value self);
value atg_istft(value self, int64_t n_fft, value hop_length, value win_length, value window, int center, int normalized, int onesided, value length, int return_complex);
value atg_kaiser_window(int64_t window_length, int options_kind, int options_device);
value atg_kaiser_window_beta(int64_t window_length, int periodic, double beta, int options_kind, int options_device);
value atg_kaiser_window_beta_out(value out, int64_t window_length, int periodic, double beta);
value atg_kaiser_window_out(value out, int64_t window_length);
value atg_kaiser_window_periodic(int64_t window_length, int periodic, int options_kind, int options_device);
value atg_kaiser_window_periodic_out(value out, int64_t window_length, int periodic);
value atg_kl_div(value self, value target, int64_t reduction, int log_target);
value atg_kron(value self, value other);
value atg_kron_out(value out, value self, value other);
value atg_kthvalue(value self, int64_t k, int64_t dim, int keepdim);
value atg_kthvalue_values(value values, value indices, value self, int64_t k, int64_t dim, int keepdim);
value atg_l1_loss(value self, value target, int64_t reduction);
value atg_layer_norm(value input, value normalized_shape, value weight, value bias, double eps, int cudnn_enable);
value atg_lcm(value self, value other);
value atg_lcm_(value self, value other);
value atg_lcm_out(value out, value self, value other);
value atg_ldexp(value self, value other);
value atg_ldexp_(value self, value other);
value atg_ldexp_out(value out, value self, value other);
value atg_le(value self, value other);
value atg_le_(value self, value other);
value atg_le_scalar_out(value out, value self, value other);
value atg_le_tensor(value self, value other);
value atg_le_tensor_(value self, value other);
value atg_le_tensor_out(value out, value self, value other);
value atg_leaky_relu(value self, value negative_slope);
value atg_leaky_relu_(value self, value negative_slope);
value atg_leaky_relu_backward(value grad_output, value self, value negative_slope, int self_is_result);
value atg_leaky_relu_backward_grad_input(value grad_input, value grad_output, value self, value negative_slope, int self_is_result);
value atg_leaky_relu_out(value out, value self, value negative_slope);
value atg_lerp(value self, value end, value weight);
value atg_lerp_(value self, value end, value weight);
value atg_lerp_scalar_out(value out, value self, value end, value weight);
value atg_lerp_tensor(value self, value end, value weight);
value atg_lerp_tensor_(value self, value end, value weight);
value atg_lerp_tensor_out(value out, value self, value end, value weight);