src/bindings/torch_bindings_generated4.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_index_fill_int_scalar_out =
    foreign
      "atg_index_fill_int_scalar_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_index_fill_int_tensor =
    foreign
      "atg_index_fill_int_tensor"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_index_fill_int_tensor_ =
    foreign
      "atg_index_fill_int_tensor_"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_index_fill_int_tensor_out =
    foreign
      "atg_index_fill_int_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_index_reduce =
    foreign
      "atg_index_reduce"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_index_reduce_ =
    foreign
      "atg_index_reduce_"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_index_reduce_out =
    foreign
      "atg_index_reduce_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_index_select =
    foreign
      "atg_index_select"
      (gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_index_select_backward =
    foreign
      "atg_index_select_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_index_select_out =
    foreign
      "atg_index_select_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_indices = foreign "atg_indices" (gc_tensor @-> returning raw_tensor)
  let stubs_indices_copy = foreign "atg_indices_copy" (gc_tensor @-> returning raw_tensor)

  let stubs_indices_copy_out =
    foreign "atg_indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_infinitely_differentiable_gelu_backward =
    foreign
      "atg_infinitely_differentiable_gelu_backward"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_inner = foreign "atg_inner" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_inner_out =
    foreign
      "atg_inner_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_instance_norm =
    foreign
      "atg_instance_norm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_int_repr = foreign "atg_int_repr" (gc_tensor @-> returning raw_tensor)

  let stubs_int_repr_out =
    foreign "atg_int_repr_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_inverse = foreign "atg_inverse" (gc_tensor @-> returning raw_tensor)

  let stubs_inverse_out =
    foreign "atg_inverse_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_is_coalesced = foreign "atg_is_coalesced" (gc_tensor @-> returning bool)
  let stubs_is_complex = foreign "atg_is_complex" (gc_tensor @-> returning bool)
  let stubs_is_conj = foreign "atg_is_conj" (gc_tensor @-> returning bool)
  let stubs_is_distributed = foreign "atg_is_distributed" (gc_tensor @-> returning bool)

  let stubs_is_floating_point =
    foreign "atg_is_floating_point" (gc_tensor @-> returning bool)
  ;;

  let stubs_is_inference = foreign "atg_is_inference" (gc_tensor @-> returning bool)
  let stubs_is_leaf = foreign "atg_is_leaf" (gc_tensor @-> returning bool)
  let stubs_is_neg = foreign "atg_is_neg" (gc_tensor @-> returning bool)
  let stubs_is_nonzero = foreign "atg_is_nonzero" (gc_tensor @-> returning bool)
  let stubs_is_pinned = foreign "atg_is_pinned" (gc_tensor @-> int @-> returning bool)

  let stubs_is_same_size =
    foreign "atg_is_same_size" (gc_tensor @-> gc_tensor @-> returning bool)
  ;;

  let stubs_is_set_to =
    foreign "atg_is_set_to" (gc_tensor @-> gc_tensor @-> returning bool)
  ;;

  let stubs_is_signed = foreign "atg_is_signed" (gc_tensor @-> returning bool)

  let stubs_is_vulkan_available =
    foreign "atg_is_vulkan_available" (void @-> returning bool)
  ;;

  let stubs_isclose =
    foreign
      "atg_isclose"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_isfinite = foreign "atg_isfinite" (gc_tensor @-> returning raw_tensor)

  let stubs_isin =
    foreign "atg_isin" (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isin_scalar_tensor =
    foreign
      "atg_isin_scalar_tensor"
      (scalar @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isin_scalar_tensor_out =
    foreign
      "atg_isin_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isin_tensor_scalar =
    foreign
      "atg_isin_tensor_scalar"
      (gc_tensor @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isin_tensor_scalar_out =
    foreign
      "atg_isin_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isin_tensor_tensor_out =
    foreign
      "atg_isin_tensor_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_isinf = foreign "atg_isinf" (gc_tensor @-> returning raw_tensor)

  let stubs_isinf_out =
    foreign "atg_isinf_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_isnan = foreign "atg_isnan" (gc_tensor @-> returning raw_tensor)

  let stubs_isnan_out =
    foreign "atg_isnan_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_isneginf = foreign "atg_isneginf" (gc_tensor @-> returning raw_tensor)

  let stubs_isneginf_out =
    foreign "atg_isneginf_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_isposinf = foreign "atg_isposinf" (gc_tensor @-> returning raw_tensor)

  let stubs_isposinf_out =
    foreign "atg_isposinf_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_isreal = foreign "atg_isreal" (gc_tensor @-> returning raw_tensor)

  let stubs_istft =
    foreign
      "atg_istft"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window =
    foreign "atg_kaiser_window" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window_beta =
    foreign
      "atg_kaiser_window_beta"
      (int64_t @-> int @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window_beta_out =
    foreign
      "atg_kaiser_window_beta_out"
      (gc_tensor @-> int64_t @-> int @-> double @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window_out =
    foreign "atg_kaiser_window_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window_periodic =
    foreign
      "atg_kaiser_window_periodic"
      (int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_kaiser_window_periodic_out =
    foreign
      "atg_kaiser_window_periodic_out"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_kl_div =
    foreign
      "atg_kl_div"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_kron = foreign "atg_kron" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_kron_out =
    foreign "atg_kron_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_kthvalue =
    foreign
      "atg_kthvalue"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_kthvalue_values =
    foreign
      "atg_kthvalue_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_l1_loss =
    foreign "atg_l1_loss" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_layer_norm =
    foreign
      "atg_layer_norm"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_lcm = foreign "atg_lcm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_lcm_ = foreign "atg_lcm_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_lcm_out =
    foreign "atg_lcm_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ldexp = foreign "atg_ldexp" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_ldexp_ =
    foreign "atg_ldexp_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ldexp_out =
    foreign
      "atg_ldexp_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_le = foreign "atg_le" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_le_ = foreign "atg_le_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_le_scalar_out =
    foreign
      "atg_le_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_le_tensor =
    foreign "atg_le_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_le_tensor_ =
    foreign "atg_le_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_le_tensor_out =
    foreign
      "atg_le_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_leaky_relu =
    foreign "atg_leaky_relu" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_leaky_relu_ =
    foreign "atg_leaky_relu_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_leaky_relu_backward =
    foreign
      "atg_leaky_relu_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_leaky_relu_backward_grad_input =
    foreign
      "atg_leaky_relu_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> int @-> returning raw_tensor)
  ;;

  let stubs_leaky_relu_out =
    foreign
      "atg_leaky_relu_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_lerp =
    foreign "atg_lerp" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_lerp_ =
    foreign "atg_lerp_" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_lerp_scalar_out =
    foreign
      "atg_lerp_scalar_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_lerp_tensor =
    foreign
      "atg_lerp_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lerp_tensor_ =
    foreign
      "atg_lerp_tensor_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lerp_tensor_out =
    foreign
      "atg_lerp_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
